[project]
name = "cv-labs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "logly>=0.1.6",
    "marimo>=0.18.4",
    "opencv-python>=4.12.0.88",
    "optuna>=4.6.0",
    "scikit-learn>=1.8.0",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
]
