[project]
name = "cv-labs"
version = "0.1.0"
description = "Computer Vision Labs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "logly>=0.1.6",
    "marimo>=0.18.4",
    "opencv-python>=4.12.0.88",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[dependency-groups]
advanced = [
    "matplotlib>=3.10.8",
    "monai>=1.5.1",
    "nibabel>=5.3.3",
    "onnxruntime>=1.23.2",
    "requests>=2.32.5",
    "scikit-image>=0.25.2",
    "streamlit>=1.52.2",
    "torch>=2.9.1",
]
